--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|git.php|beforeAndrew|images|robots\.txt)
+RewriteCond $1 !^(index\.php|git.php|beforeAndrew|img|js|css|favicon.ico|robots\.txt)
 RewriteRule ^(.*)$ /index.php/$1 [L]
