--- a/android-native/bin/AndroidManifest.xml
+++ b/android-native/bin/AndroidManifest.xml
@@ -12,25 +12,25 @@
 	
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GreenTheme" >
 		<uses-library android:name="com.google.android.maps" />
-        <activity
-            android:name=".Home"
-            android:label="@string/home_title" >
-            <intent-filter>
+		<!-- MAIN ACTIVITY = MAP -->
+		<activity 
+        	android:name=".Map" 
+        	android:label="@string/map_title"
+     		android:theme="@android:style/Theme.Light.NoTitleBar">
+			<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-        	android:name=".Map" 
-        	android:label="@string/map_title"
-     		android:theme="@android:style/Theme.Light.NoTitleBar">
+        <activity
+            android:name=".Home"
+            android:label="@string/home_title" >
         </activity>
     </application>
 
