--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|updatelog.html|git.php|manage|img|css|favicon.ico|.+html|robots\.txt)
+RewriteCond $1 !^(index\.php|tmp|git.php|img|css|favicon.ico|.+html|robots\.txt)
 RewriteRule ^(.*)$ /index.php/$1 [L]
