--- a/android-native/bin/AndroidManifest.xml
+++ b/android-native/bin/AndroidManifest.xml
@@ -3,9 +3,7 @@
     android:versionCode="2"
     android:versionName="1.1" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16" />
         
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,17 +14,27 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/GreenTheme" >
+        android:theme="@style/GreenTheme">
 		<uses-library android:name="com.google.android.maps" />
 		<!-- MAIN ACTIVITY = MAP -->
 		<activity 
-        	android:name=".Map" 
-        	android:label="@string/map_title"
-     		android:theme="@android:style/Theme.Light.NoTitleBar">
+        	android:name=".MainActivity" 
+        	android:label="@string/main_title"
+     		android:theme="@style/MapTheme"
+     		android:uiOptions="splitActionBarWhenNarrow">
 			<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name=".Map"
+            android:label="@string/map_title"
+            android:theme="@style/GreenTheme">
+		<!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".Home"
