--- a/android-native/project.properties
+++ b/android-native/project.properties
@@ -11,4 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:8
+target=Google Inc.:Google APIs:16
+android.library=false
+android.library.reference.1=..\\..\\HoloEverywhere\\contrib\\ActionBarSherlock\\library
+android.library.reference.2=../../HoloEverywhere/library
